<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vs18.healthdiary.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_navigation_home_to_inputFragment"
            app:destination="@id/inputFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_charts"
        android:name="com.vs18.healthdiary.ui.charts.ChartsFragment"
        android:label="@string/title_charts"
        tools:layout="@layout/fragment_charts"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.vs18.healthdiary.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/inputFragment"
        android:name="com.vs18.healthdiary.ui.input.InputFragment"
        android:label="@string/title_input"
        tools:layout="@layout/fragment_input">

        <argument
            android:name="entryId"
            app:argType="long"
            android:defaultValue="0L"/>

    </fragment>
    <action
        android:id="@+id/action_global_inputFragment"
        app:destination="@id/inputFragment"
        app:enterAnim="@animator/nav_default_enter_anim"
        app:exitAnim="@animator/nav_default_exit_anim"
        app:popEnterAnim="@animator/nav_default_pop_enter_anim"
        app:popExitAnim="@animator/nav_default_pop_exit_anim"
        />

</navigation>