<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:text="@string/settings"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonExport"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/export_to_csv"
        android:textSize="18sp"
        app:icon="@android:drawable/ic_menu_save"
        app:iconGravity="textStart"
        app:iconTint="#fff"
        app:iconPadding="16dp"
        android:backgroundTint="#43a047"
        app:strokeColor="#2e7d32"
        app:strokeWidth="2dp"
        style="@style/Widget.MaterialComponents.Button"
        app:cornerRadius="16dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonExport"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/DarkTheme"
                android:textSize="18sp" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardTheme"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LanguageInterface"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/languages"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>